# language-learner

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
app/: bot.py  cards.py  config.py  db.py  main.py  models.py  pipeline.py  srs.py  storage.py  tts.py  web.py
app/static/: review.js  study.js  style.css
app/templates/: index.html  review.html  study.html
scripts/: deploy_cloud_run.sh  setup_secrets.sh  smoke.sh  validate_prompt.py
tests/: test_db_query.py  test_dedupe.py  test_due_cards.py  test_pipeline.py  test_srs.py  test_web.py
