[project]
name = "language-learner"
version = "0.1.0"
description = "Capture spoken English phrases, get Italian shadowing audio + Anki cards"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "aiogram>=3.13",
    "fsrs>=5.0",
    "groq>=0.13",
    "mistralai>=1.2",
    "google-cloud-firestore>=2.20",
    "google-cloud-texttospeech>=2.21",
    "google-cloud-storage>=2.18",
    "genanki>=0.13",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
